--- a/mybatis-original/pom.xml
+++ b/mybatis-original/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.28</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.caches</groupId>
+            <artifactId>mybatis-redis</artifactId>
+            <version>1.0.0-beta1</version>
+        </dependency>
     </dependencies>
 
 
