--- a/simple-web/src/main/webapp/WEB-INF/web.xml
+++ b/simple-web/src/main/webapp/WEB-INF/web.xml
@@ -34,8 +34,20 @@
     <servlet-class>com.moralok.servlet.web.DownloadCsv</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>Ch5 TestInitParams</servlet-name>
+    <servlet-class>com.moralok.servlet.web.TestInitParams</servlet-class>
+    <init-param>
+      <param-name>myEmail</param-name>
+      <param-value>admin@moralok.com</param-value>
+    </init-param>
+    <init-param>
+      <param-name>myName</param-name>
+      <param-value>moralok</param-value>
+    </init-param>
+  </servlet>
+  <servlet>
     <servlet-name>ListenerTest</servlet-name>
-    <servlet-class>com.moralok.servlet.ListenerTest</servlet-class>
+    <servlet-class>com.moralok.servlet.web.ListenerTest</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -53,6 +65,10 @@
   <servlet-mapping>
     <servlet-name>Ch4 DownloadCsv</servlet-name>
     <url-pattern>/DownloadCsv</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Ch5 TestInitParams</servlet-name>
+    <url-pattern>/TestInitParams</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ListenerTest</servlet-name>
