Head First Servlet&JSP - ch6 会话管理 - 与会话相关的监听者和事件

--- a/simple-web/src/main/webapp/WEB-INF/web.xml
+++ b/simple-web/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,12 @@
   <listener>
     <listener-class>com.moralok.servlet.listener.MyServletContextListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.moralok.servlet.listener.SessionCounter</listener-class>
+  </listener>
+  <listener>
+    <listener-class>com.moralok.servlet.listener.MyHttpSessionAttributeListener</listener-class>
+  </listener>
 
   <!--servlet 映射-->
   <servlet>
