--- a/simple-web/src/main/webapp/WEB-INF/web.xml
+++ b/simple-web/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,16 @@
     <listener-class>com.moralok.servlet.listener.MyHttpSessionAttributeListener</listener-class>
   </listener>
 
+  <filter>
+    <filter-name>Ch13 Filter</filter-name>
+    <filter-class>com.moralok.servlet.filter.RequestFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>Ch13 Filter</filter-name>
+    <servlet-name>Ch1 Servlet</servlet-name>
+  </filter-mapping>
+
   <!--servlet 映射-->
   <servlet>
     <servlet-name>Ch1 Servlet</servlet-name>
