--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -7,6 +7,12 @@
     <groupId>com.moralok</groupId>
     <artifactId>spring-annotation</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <encoding>UTF-8</encoding>
+    </properties>
 
     <dependencies>
         <dependency>
