test(Dubbo): 测试 Dubbo SPI
详细分析见博客

--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,34 @@
         <module>spring-annotation</module>
         <module>simple-web</module>
         <module>mybatis-original</module>
+        <module>dubbo-spi-test</module>
     </modules>
+
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <encoding>UTF-8</encoding>
+        <junit.version>5.9.3</junit.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
